# Vaultly

./: .env  .gitignore  404.html  CHANGELOG.md  backup_test.json  build_log.txt  firestore.rules  index.html  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
assets/: html2canvas.esm-DfICb1sL.js  index-5vM24KO0.js  index-6Ulq2Ydl.css  index-AFOezuFe.js  index-B0CJ3WHD.js  index-B77Wybe8.js  index-BARGQTaS.js  index-BPnPIPg9.css  index-BSOEGzXz.css  index-BbViBeBm.css  index-BbnOyOK7.css  index-BhNEJm1c.js  index-BjY7EWvk.css  index-BnIMc97g.css  index-BnPtGvCr.js  index-BnqnD7P5.css  index-BoihHcdg.js  index-Bp8L1nKi.js  index-BtrcQFph.css  index-C11j-Gee.js  index-C1PXgvkD.js  index-C4JJA8eu.js  index-C4gkZ4m8.css  index-C5rnMNqK.css  index-C7EsfvZE.js  index-CK8Mn8zR.js  index-CL7ROnnB.js  index-CMXTfmMZ.js  index-CNjBKEzh.css  index-CO3bl8AM.js  index-CPvasRiw.js  index-CQ5_YzNK.css  index-CTL0jMkq.js  index-CZdwfQ6p.css  index-C_4maz-O.js  index-C_8L7amQ.css  index-Ci6TkFeB.css  index-CkavCdv-.css  index-CoN1oIJ5.js  index-Crqxa44n.js  (+50 more)
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: DebugFooter.tsx  MonthSelector.tsx  Sidebar.tsx  SyncStatus.tsx
src/context/: AuthContext.tsx  CollaborationContext.tsx  DataContext.tsx  FinanceContext.tsx  GamificationConstants.ts  GamificationContext.tsx  NotificationContext.tsx  ProjectsContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/data/: encyclopediaData.tsx
(+63 files in other folders)
