[package]
name = "vaultly"
version = "0.1.0"
description = "Personal Finance Vault"
authors = ["you"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
